--- a/sinatra_blackjack/views/game.erb
+++ b/sinatra_blackjack/views/game.erb
@@ -19,3 +19,20 @@ Player's cards:
   <li> <%= card.to_s %> </li>
   <% end %>
 </ul>
+
+<p>  
+  <%= session[:player_name] %> has <%= calculate_total(session[:player_cards]) %>
+</p>
+
+<p>What would you like to do? </p>
+
+<% if @show_hit_or_stay_buttons %>
+  <form action = 'game/player/hit' method = 'post'>
+    <input type = 'submit' class = 'btn' value = 'Hit'/>
+  </form>
+
+  <form action = 'game/player/stay' method = 'post'>
+    <input type = 'submit' class = 'btn' value = 'Stay' />
+  </form>
+<% end %>
+
