--- a/sinatra_blackjack/views/layout.erb
+++ b/sinatra_blackjack/views/layout.erb
@@ -21,7 +21,12 @@
     <%if @error %>
       <div class="alert alert-error"><%=@error%></div>
     <% end %>
-      <%= yield %>
+     
+    <%if @success %>
+      <div class="alert alert-success"><%=@success%></div>
+    <% end %>
+
+     <%= yield %>
   </div>
   </body>
 </html>
