--- a/sinatra_blackjack/views/game.erb
+++ b/sinatra_blackjack/views/game.erb
@@ -1,38 +1,37 @@
-<h1>Blackjack!</h1>
+<h1>Let's Play Blackjack!</h1>
 
 <p>Welcome <%= session[:player_name] %>. </p>
 
-Dealer's cards:
-<ul>
+<div class = 'well'>
+<h4>Dealer's cards:</h4>
   <% session[:dealer_cards].each do |card| %>
-  <li><%= card.to_s %></li>
+  <%= card_image(card) %>
   <% end %>
-
-</ul>
+</div>
 
 <br>
 
-Player's cards:
-
-<ul>
+<div class = 'well'>
+<h4>Player's cards:</h4>
   <% session[:player_cards].each do |card| %>
-  <li> <%= card.to_s %> </li>
+  <%= card_image(card) %>
   <% end %>
-</ul>
+</div>
 
 <p>  
   <%= session[:player_name] %> has <%= calculate_total(session[:player_cards]) %>
 </p>
 
-<p>What would you like to do? </p>
+
 
 <% if @show_hit_or_stay_buttons %>
-  <form action = 'game/player/hit' method = 'post'>
-    <input type = 'submit' class = 'btn' value = 'Hit'/>
-  </form>
+  <p>What would <%= session[:player_name] %> like to do? </p>
+    <form id = 'hit_form' action = '/game/player/hit' method = 'post'>
+      <input type = 'submit' class = 'btn btn-success' value = 'Hit'/>
+    </form>
 
-  <form action = 'game/player/stay' method = 'post'>
-    <input type = 'submit' class = 'btn' value = 'Stay' />
-  </form>
+    <form id = 'stay_form' action = '/game/player/stay' method = 'post'>
+      <input type = 'submit' class = 'btn btn-warning' value = 'Stay' />
+    </form>
 <% end %>
 
