Thru solution #5, dealer's turn & comparison of scores

--- a/sinatra_blackjack/views/game.erb
+++ b/sinatra_blackjack/views/game.erb
@@ -7,6 +7,15 @@
   <% session[:dealer_cards].each do |card| %>
   <%= card_image(card) %>
   <% end %>
+
+  <% if @show_dealer_hit_button %>
+  <p>
+    <h5>Dealer has <%= calculate_total(session[:dealer_cards]) %> and will hit. </h5>
+    <form id = 'dealer_hit_form' action = '/game/dealer/hit' method = 'post'>
+      <input type = 'submit' class = 'btn btn-primary' value = 'Show dealer card ->'/>
+    </form>
+  </p>
+  <% end %>
 </div>
 
 <br>
@@ -21,8 +30,6 @@
 <p>  
   <%= session[:player_name] %> has <%= calculate_total(session[:player_cards]) %>
 </p>
-
-
 
 <% if @show_hit_or_stay_buttons %>
   <p>What would <%= session[:player_name] %> like to do? </p>
