--- a/sinatra_blackjack/views/game.erb
+++ b/sinatra_blackjack/views/game.erb
@@ -32,7 +32,7 @@
 
 <br>
 
-<div class = 'well'>
+<div class = 'well' id = 'player_cards'>
 <h4>Player's cards:</h4>
   <% session[:player_cards].each do |card| %>
   <%= card_image(card) %>
